# bourracho

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: django.yml
api/: settings.py  urls.py
backend/: db.sqlite3  pyproject.toml  railway.json  requirements.txt
backend/bourracho/: __init__.py  config.py  conversations_registry.py  conversations_store.py  messages_store.py  models.py  stores_registry.py  users_store.py  utils.py
backend/bourracho/conversation_store/: abstract_conversation_store.py  json_conversation_store.py  mongo_conversation_store.py
backend/conversations_api/: api.py  apps.py  config.py  tests.py  urls.py
backend/registry_persistence_dir/registry_id=default_registry/: information.json
backend/src/: asgi.py  settings.py  wsgi.py
backend/tests/: test_conversations_registry.py  test_conversations_store.py  test_json_message_store.py  test_messages_store.py  test_mongo_conversation_store.py  test_stores_registry.py  test_users_store.py
backend/tmp/registry_persistence_dir/registry_id=267f6/: information.json
backend/tmp/registry_persistence_dir/registry_id=267f6/YS6MVW/: messages.json  metadata.json  users_ids.json
bourracho/: __init__.py  config.py  conversations_registry.py  models.py
bourracho/conversation_store/: abstract_conversation_store.py  json_conversation_store.py
conversations_api/: config.py  tests.py  urls.py  views.py
frontend/: .prettierignore  README.md  eslint.config.js  index.html  openapi-ts.mts  package-lock.json  package.json  vite.config.ts
frontend/dev-dist/: sw.js
frontend/public/: index.html  manifest.json  sw.js
frontend/src/: App.css  App.js  App.tsx  index.css  (+1 more)
frontend_old/: README.md  package-lock.json  package.json
tests/: test_conversations_registry.py  test_json_message_store.py
(+22 files in other folders)
